sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
val n = getNombreValeurs()
var swapped = true
	while (swapped)
		{swapped = false
		for (i <- 0 to n-2)
			{if (!plusPetit(i,i+1)
				{echange(i,i+1)
				swapped = true}
			}
		for (k <- n-2 to 0 by -1)
			{if (plusPetit(k,k+1)
				{echange(k,k+1)
				swapped = true}
			}
		}
}